--- a/index.html
+++ b/index.html
@@ -16,24 +16,32 @@
         </header>
         <strong>Votre pause gourmande commence ici!</strong>
         <section class="vitrine">
-            <img src="decor.jpg" alt="exemple de nos gaufres">
-            <img src="decor2.jpg" alt="exemple de nos gaufres">
-            <img src="decor3.jpg" alt="exemple de nos gaufres"></p>
+            <div class="vitrine1">
+                <img src="decor.jpg" alt="exemple de nos gaufres">
+                <img src="decor2.jpg" alt="exemple de nos gaufres">
+                <img src="decor3.jpg" alt="exemple de nos gaufres"></p>
+            </div>    
+            <div class="vitrine2">
+                <img src="decor4 .jpg" alt="exemple de nos gaufres">
+                <img src="decor5.jpg" alt="exemple de nos gaufres">
+                <img src="decor6.jpg" alt="exemple de nos gaufres">
+            </div>
         </section>
+
 
         <section class="offres">
             <h2 class ="tmenu">Nos différents choix: </h2>
             <p class="menu"><img src="menu_dm.jpg" alt="Notre menu"></p>
         </section>
-         <div class="promotion">
+        <div class="promotion">
             <div class="tpromo">
                 <h2>PROMOTION GOURMANDE !</h2>
             </div>
             <p>Et parce que nous aimons vous faire plaisir, nous avons une promotion pour nos meilleurs clients:<br/> Après 3 commandes faites en 1 mois la 4ème est offerte(lot de 3pcs uniquement , saveur et garniture au choix!)</p>
 
-        </div>       
+        </div>
         <div class="order">
-            <div class="torder"> 
+            <div class="torder">
                 <h2>POUR COMMANDER :</h2>
             </div>    
             <p>Notre service de livraison est disponible dans la ville de Matadi du Mardi au Samedi de 13h à 18h. </p>
