--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
         <p class="logo"><img src="logo.jpg" alt="logo_DM_Gourmandise"></p>
         <header>
             <div class="thome">
-                <h1>Bienvenue sur DM_Gourmandise</h1>
+                <h1>Bienvenue chez DM_Gourmandise</h1>
             </div>    
         </header>
+        <div class="about">
+            <h2 class="tabout">Ce que vous devez savoir</h2>
+            <p>Notre passion pour la pâtisserie ne s'arrête pas aux gaufres.<br/> Aujourd'hui, nous vous présentons nos menus goourmands, et bientôt, d'autres délices viendront enrichir notre carte.Restez à l'affût,la gourmandise continue!</p>
+
+
+        </div>
         <strong>Votre pause gourmande commence ici!</strong>
         <section class="vitrine">
             <div class="vitrine1">
