--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>    
             <p>Notre service de livraison est disponible dans la ville de Matadi du Mardi au Samedi de 13h à 18h. </p>
             <P>Pour passer votre commande via Whatsapp veuillez cliquer sur ce logo: </P>
-            <a href="https://wa.me/243850292852?text=Bonjour%20je%20souhaite%20commander%20(gaufres%20que%20vous%20voulez%20)%20ce%20(jour%20et%20date)%20à%20(heure)%20s'il%20vous%20plait.
+            <a href="https://wa.me/243850292852?text=Bonjour%20je%20souhaite%20commander%20(gaufres%20que%20vous%20voulez%20'saveur+type+garniture')%20ce%20(jour%20et%20date)%20à%20(heure)%20s'il%20vous%20plait.
             
             
             Voici%20mon%20adresse:(votre%20adresse),merci." target="_blank">
