--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NF4TRB9W');</script>
-<!-- End Google Tag Manager -->
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-NF4TRB9W');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="style.css">
     <title>DM_Gourmandise</title>
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF4TRB9W"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="main">
         <p class="logo"><img src="logo.jpg" alt="logo_DM_Gourmandise"></p>
         <header>
@@ -34,21 +34,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <strong>Votre pause gourmande commence ici!</strong>
         <section class="vitrine">
             <div class="vitrine1">
-                <img src="decor.jpg" alt="exemple de nos gaufres">
+                <img src="decor1.jpg" alt="exemple de nos gaufres">
                 <img src="decor2.jpg" alt="exemple de nos gaufres">
-                <img src="decor3.jpg" alt="exemple de nos gaufres"></p>
             </div>    
             <div class="vitrine2">
-                <img src="decor4 .jpg" alt="exemple de nos gaufres">
-                <img src="decor5.jpg" alt="exemple de nos gaufres">
-                <img src="decor6.jpg" alt="exemple de nos gaufres">
+                <img src="decor3.jpg" alt="exemple de nos gaufres">
+                <img src="decor4.jpg" alt="exemple de nos gaufres">
             </div>
         </section>
 
 
         <section class="offres">
-            <h2 class ="tmenu">Nos différents choix: </h2>
-            <p class="menu"><img src="menu_dm.jpg" alt="Notre menu"></p>
+            <h2 class ="tmenu"></h2>
+            <p class="menu"><img src="menu.JPG" alt="Notre menu"></p>
         </section>
         <div class="promotion">
             <div class="tpromo">
