--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <div class="about">
             <h2 class="tabout">Ce que vous devez savoir</h2>
-            <p>Notre passion pour la pâtisserie ne s'arrête pas aux gaufres.<br/> Aujourd'hui, nous vous présentons nos menus goourmands, et bientôt, d'autres délices viendront enrichir notre carte.Restez à l'affût,la gourmandise continue!</p>
+            <p>Notre passion pour la pâtisserie ne s'arrête pas aux gaufres.<br/> Aujourd'hui, nous vous présentons nos menus gourmands, et bientôt, d'autres délices viendront enrichir notre carte.Restez à l'affût,la gourmandise continue!</p>
 
 
         </div>
