--- a/index.html
+++ b/index.html
@@ -14,11 +14,21 @@
     <title>DM_Gourmandise</title>
 </head>
 <body>
+
+
     <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NF4TRB9W"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+
     <div class="main">
+
+        <div class="loader">
+            <img src="logo.jpg" alt="logo_DM_Gourmandise">
+        </div>
+
+        
         <p class="logo"><img src="logo.jpg" alt="logo_DM_Gourmandise"></p>
         <header>
             <div class="thome">
