--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         <section class="offres">
             <h2 class ="tmenu"></h2>
+            <p class="menu"><img src="menu_dm2.JPG" alt="Notre menu"></p>
             <p class="menu"><img src="menu.JPG" alt="Notre menu"></p>
         </section>
         <div class="promotion">
