--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
         </div>
         <div class="cards">
             <div class="card1">
-                <img src="cards\card1.JPG" alt="carte 1">
+                <img src="=card1.JPG" alt="carte 1">
                 <p>Laissez-vous tenter par nos crêpes généreusement garnies : corne boeuf savoureux, mozzarella fondante avec saucisse ou encore chocolat onctueux… un vrai régal à chaque bouchée !</p>
             </div>
             <div class="card2">
-                <img src="cards\card2.JPG" alt="carte 2">
+                <img src="card2.JPG" alt="carte 2">
                 <p>Sublimez vos crêpes avec nos nappages d’exception : le caractère du chocolat noir, la douceur du chocolat blanc, ou l’harmonie parfaite des deux réunis</p>
             </div>
             <div class="card3">    
-                <img src="cards/card3.JPG" alt="carte 3">
+                <img src="card3.JPG" alt="carte 3">
                 <p>Sublimez vos crêpes avec nos nappages d’exception : le caractère du chocolat noir, la douceur du chocolat blanc, ou l’harmonie parfaite des deux réunis</p>
 
             </div>
             <div class="card4">
-                <img src="cards/card4.JPG" alt="carte 4">
+                <img src="card4.JPG" alt="carte 4">
                 <p>Terminez votre gourmandise en beauté avec notre verrine tiramisu : des couches généreuses de crème légère et onctueuse, un biscuit délicatement imbibé de café, le tout sublimé par une fine poudre de cacao… un dessert élégant et irrésistible qui fond littéralement en bouche</p>
             </div>
         </div>
