--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="cards">
             <div class="card1">
-                <img src="=card1.JPG" alt="carte 1">
+                <img src="card1.JPG" alt="carte 1">
                 <p>Laissez-vous tenter par nos crêpes généreusement garnies : corne boeuf savoureux, mozzarella fondante avec saucisse ou encore chocolat onctueux… un vrai régal à chaque bouchée !</p>
             </div>
             <div class="card2">
@@ -57,3 +57,4 @@
   
 </body>
 </html>
+
